[package]
name = "transaction-builder-generator"
version = "1.11.11"
authors = ["Diem Association <opensource@diem.org>"]
description = "Diem transaction-builder"
repository = "https://github.com/diem/diem"
homepage = "https://diem.org"
license = "Apache-2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.41"
heck = "0.3.3"
regex = "1.5.4"
clap = { version = "3", features = ["derive"] }
textwrap = "0.14.0"
serde_yaml = "0.8.21"
serde-generate = {git="https://github.com/zefchain/serde-reflection" }
serde-reflection = {git="https://github.com/zefchain/serde-reflection"}

starcoin-vm-types = { git = "https://github.com/starcoinorg/starcoin"}
move-core-types = {git = "https://github.com/starcoinorg/move" }
bcs = "0.1.3"

[dev-dependencies]
tempfile = "3.2.0"
which = "4.1.0"

[features]
default = []

[[bin]]
name = "generate-transaction-builders"
path = "src/generate.rs"
test = false
